finished adapting PAULA to Salt 3.0